@@ -115,10 +115,11 @@ XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 	* Release 1.2.5
 	* Fixed
-		- Fix compilation with LASH support enabled (#2076).		- Fix compilation with LASH support enabled (#2076).
+		- Fix compilation with LASH support enabled (#2076).
 		- Fix Hue slider in Preferences > Appearance > Color (#2081)
 		- Show the Crash Reporter and exit with return code `1` on unhandled
 			exceptions.
+		- Fix crashes in SampleEditor (#2092).
 
 2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 	* Release 1.2.4
